// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`render image widget with help hint 1`] = `
<div>
  <div>
    <div
      class="makeStyles-propertySectionLabel-13"
    >
      <h6
        class="MuiTypography-root makeStyles-typography-14 MuiTypography-subtitle2"
      >
        myImage
      </h6>
      <div
        class="makeStyles-decorators-15"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-colorSecondary"
          focusable="false"
          style="margin-left: 8px; font-size: 16px;"
          title=""
          viewBox="0 0 24 24"
        >
          <path
            d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
          />
        </svg>
      </div>
    </div>
    <div
      class="makeStyles-container-11 makeStyles-container-12"
    >
      <img
        id="imageId"
        src="https://www.eclipse.org/sirius/common_assets/images/logos/logo_sirius.png"
        width="100%"
      />
    </div>
  </div>
</div>
`;

exports[`render image widget with maxWidth 1`] = `
<div>
  <div>
    <div
      class="makeStyles-propertySectionLabel-3"
    >
      <h6
        class="MuiTypography-root makeStyles-typography-4 MuiTypography-subtitle2"
      >
        myImage
      </h6>
      <div
        class="makeStyles-decorators-5"
      />
    </div>
    <div
      class="makeStyles-container-1 makeStyles-container-2"
    >
      <img
        id="imageId"
        src="https://www.eclipse.org/sirius/common_assets/images/logos/logo_sirius.png"
        width="100%"
      />
    </div>
  </div>
</div>
`;

exports[`render image widget without maxWidth 1`] = `
<div>
  <div>
    <div
      class="makeStyles-propertySectionLabel-8"
    >
      <h6
        class="MuiTypography-root makeStyles-typography-9 MuiTypography-subtitle2"
      >
        myImage
      </h6>
      <div
        class="makeStyles-decorators-10"
      />
    </div>
    <div
      class="makeStyles-container-6 makeStyles-container-7"
    >
      <img
        id="imageId"
        src="https://www.eclipse.org/sirius/common_assets/images/logos/logo_sirius.png"
        width="100%"
      />
    </div>
  </div>
</div>
`;
